other/a/allowed-label-changes/.chainsaw-test/chainsaw-step-02-apply-3.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
  name: pod03
spec:
  containers:
  - image: busybox:1.35
    name: busybox
