other/a/allowed-label-changes/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allowed-label-changes
status:
  ready: true
